argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdna-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jdna-sync
  template:
    metadata:
      labels:
        app: jdna-sync
        tags.datadoghq.com/jdna-sync.env: qa
    spec:
      containers:
        - name: jdna-sync
          image: ghcr.io/dtlr/jdna-sync:edge
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
