argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adyen-sync
spec:
  selector:
    app: adyen-sync
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
